Fix problems in build.gradle add ignores